did two basic miniprojects

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   
 </head>
 <body>
-  <button id="hey">hello</button>
-  <img src="" id="imf" alt="">
-  <script src="practice.ts"></script>
+  <button id="hey" style="position: absolute; top: 35px; left: 35px; padding: 20px; border-radius: 20px; border: 0; background-color:  #fff; box-shadow: 2px 8px 15px blue inset; font-size: 30px;">CLICK TO CHANGE BG-COLOR</button>
+ <div style="position: absolute; top: 300px;"> <h1 style="width: 80px; height: 80px; background-color: limegreen; margin-left: 200px; text-align: center;padding: 10px;">0</h1>
+  <button id="inc" style="position: absolute; top: 35px; left: 35px; padding: 20px; border-radius: 20px; border: 0; background-color:  #fff; box-shadow: 2px 8px 15px blue inset; font-size: 30px;" >increse</button>
+  <button id="dec"style="position: absolute; top: 35px; left: 330px; padding: 20px; border-radius: 20px; border: 0; background-color:  #fff; box-shadow: 2px 8px 15px blue inset; font-size: 30px;" >decreses</button></div>
+  <script src="miniproject.js"></script>
 </body>
 </html>
